# cake

./: .gitignore  manual.md
.github/workflows/: ci.yaml
src/: CMakeLists.txt  build.c  cake_sources.cmake
src/cmake/: extract-stdinc.cmake
